--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,7 +10,9 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^6.13.0"
   }
 }
