--- a/package.json
+++ b/package.json
@@ -2,5 +2,25 @@
   "type": "module",
   "dependencies": {
     "mongodb": "^6.13.0"
-  }
+  },
+  "name": "audio-streaming-platform",
+  "version": "1.0.0",
+  "description": "Audio Streaming Platform Like Spotify and Deezer.",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "build": "npm install --prefix back-end && npm install --prefix front-end && npm run build --prefix front-end",
+    "start": "npm run start --prefix back-end"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/johnnyvasconcelos/Audio-Streaming-Platform.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/johnnyvasconcelos/Audio-Streaming-Platform/issues"
+  },
+  "homepage": "https://github.com/johnnyvasconcelos/Audio-Streaming-Platform#readme"
 }
